--- a/core/CreateTournament/appsettings.json
+++ b/core/CreateTournament/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MNHAT;Database=CreateTournament;TrustServerCertificate=Yes; Trusted_Connection=True"
+    "DefaultConnection": "Server=DESKTOP-JQET4F3;Database=CreateTournament;TrustServerCertificate=Yes; Trusted_Connection=True"
   },
   "AppSettings": {
     "Token": "VpJmUXVqAXpJTipCmwrUwLlEeWSPMIYV"
