--- a/client/angular.json
+++ b/client/angular.json
@@ -25,10 +25,10 @@
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.ico", "src/assets"],
 						"styles": [
+							"@angular/material/prebuilt-themes/deeppurple-amber.css",
 							"node_modules/bootstrap/dist/css/bootstrap.min.css",
 							"src/styles.scss",
-							"node_modules/ngx-toastr/toastr.css",
-							"node_modules/ngx-spinner/animations/ball-scale-multiple.css"
+							"node_modules/ngx-toastr/toastr.css"
 						],
 						"scripts": [
 							"node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
