--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "@auth0/angular-jwt": "^5.2.0",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.1",
+    "js-confetti": "^0.12.0",
     "jwt-decode": "^4.0.0",
     "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^18.0.0",
